--- a/style.css
+++ b/style.css
@@ -1,68 +1,121 @@
-#top{
-  position: absolute;
-  width:100%; 
-  height: 60px;
-  top: 0px;
-  background: #4646CD;
-  box-shadow: 5px #fff;
+@font-face {
+	font-family: adobe;
+	src:url(./adobe-std-m.otf);
+}
+
+#wrapper {
+	background: #EFDFB6;
+	
+}
+
+body {
+  background: #EFDFB6;
+  margin: 0;
+  padding: 0;
+	font-family: "adobe";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+h1 {
+	position: fixed;
+	left: 200px;
+	font-size: 80px;
+	line-height: 1.1;
+}
+
+#title {
+	position: fixed;
+	color: #FFF;
+	left: 205px;
+	top: 5px;
+}
+
+#expl {
+	position: fixed;
+	left: 210px;
+	bottom: 0px;
+	color: #FFF;
+	z-index: 2;
 }
 
 #logo {
   max-height: 55px;
-  left: 15px;
+  right: 200px;
+	bottom: 5px;
   position: absolute;
+	z-index: 2;
+	font-size: 20px;
+	color: #FFF;
+}
+
+#g1 {
+	position: absolute;
+	right: 230px;
+	top: 30px;
+	z-index: -1;
+	animation: rotation 15s infinite;
+}
+#g2 {
+	position: absolute;
+	right: 470px;
+	top: 20px;
+	z-index: -2;
+	animation: rotation 10s infinite;
+}
+#g3 {
+	position: absolute;
+	right: 320px;
+	top: 250px;
+	z-index: -3;
+	animation: rotation 5s infinite;
+}
+
+@-webkit-keyframes rotation {
+		from {
+				-webkit-transform: rotate(0deg);
+		}
+		to {
+				-webkit-transform: rotate(359deg);
+		}
 }
 
 #welcome {
-  color: #FFFFFF;
+  fill: #27DBB1
 }
-.filebox label { 
-  display: inline-block; 
-  padding: .5em .75em; 
-  color: #ffffff; 
-  font-size: 20px; 
-  line-height: normal; 
-  vertical-align: middle; 
-  background-color: #000033; 
-  cursor: pointer; border: 1px solid #cccccc; 
-  border-bottom-color: #cccccc; border-radius: .25em; 
-} 
 
-.instruction {
-  font-size: 20px;
-}
-  
-.filebox input[type="file"] { /* 파일 필드 숨기기 */ 
-  position: absolute; 
-  width: 1px; height: 1px; 
-  padding: 0; margin: -1px; 
-  overflow: hidden; 
-  clip:rect(0,0,0,0); 
-  border: 0; 
-}
 .hide {
   display: none;
 }
-.page-loaded {
-  position: absolute;
-  top: 500px;
-  width: 700px;
-  height: 500px;
-  margin:-350px 0 0 -350px;
-  left:50%;
-  right:50%;
+#screen {
+  position: fixed;
+  top: 60%;
+	left:50%;
+  width: 400px;
+  height: 250px;
+  transform:translate(-50%, -50%);
+	text-align: center;
+	display: table;
   background: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
   background-size: 600% 100%;
   animation: gradient 7s linear infinite;
   animation-direction: alternate;
   overflow: hidden;
-  border: #000033 2px solid;
+  border: #753001 8px solid;
 }
 
-body {
-  background: #14005E;
-  margin: 0;
-  padding: 0;
+#screen-text {
+	color: #FFF;
+	font-size: 1.2em;
+	display: table-cell;
+	vertical-align: middle;
+	width: 100%;
+	-ms-user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
 }
 
 @keyframes gradient {
@@ -106,4 +159,42 @@ body {
   to {
     text-shadow: 0 0 10px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
+}
+
+#bottom {
+	width:100%;
+	height:10px;
+	background-color: #000;
+	position: absolute;
+	bottom:100px;
+}
+#shadow {
+	position: absolute;
+	width: 100%;
+	height: 100px;
+	bottom: 0;
+	background-color: #662900;
+}
+
+
+.btn_file {
+	display:inline-block;
+	border:1px solid #000;
+	width:100px;
+	height:30px;
+	font-size:0.8em;
+	line-height:30px;
+	text-align:center;
+	vertical-align:middle;
+}
+input[type="file"] {
+	position:absolute;
+	width:100%;
+	height:100%;
+	padding:0;
+	margin:-1px;
+	overflow:hidden;
+	clip:rect(0,0,0,0);
+	border:0; 
+	z-index: 5;
 }
