--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 
 #wrapper {
 	background: #EFDFB6;
-	
+	width: 1000px;
+	height: 100%;
+	margin: auto;
 }
 
 body {
@@ -20,34 +22,37 @@ body {
 }
 
 h1 {
-	position: fixed;
-	left: 200px;
 	font-size: 80px;
 	line-height: 1.1;
 }
 
 #title {
-	position: fixed;
 	color: #FFF;
-	left: 205px;
-	top: 5px;
+	position:absolute;
+	top:inherit;
+	left: inherit;
+	transform: translateX(5px) translateY(5px);
+	z-index: 4;
+}
+#title2 {
+	position:absolute;
+	top:inherit;
+	left: inherit;
+	z-index: 5;
 }
 
 #expl {
-	position: fixed;
-	left: 210px;
+	position:absolute;
 	bottom: 0px;
+	z-index: 5;
 	color: #FFF;
-	z-index: 2;
 }
 
 #logo {
-  max-height: 55px;
-  right: 200px;
-	bottom: 5px;
-  position: absolute;
-	z-index: 2;
-	font-size: 20px;
+	position: relative;
+	right: 0px;
+	bottom: 0px;
+	z-index: 5;
 	color: #FFF;
 }
 
@@ -55,30 +60,39 @@ h1 {
 	position: absolute;
 	right: 230px;
 	top: 30px;
-	z-index: -1;
-	animation: rotation 15s infinite;
+	z-index: 3;
+	animation: rotation 25s linear infinite;
 }
 #g2 {
 	position: absolute;
 	right: 470px;
 	top: 20px;
-	z-index: -2;
-	animation: rotation 10s infinite;
+	z-index: 2;
+	animation: rotation1 20s linear infinite;
 }
 #g3 {
 	position: absolute;
 	right: 320px;
 	top: 250px;
-	z-index: -3;
-	animation: rotation 5s infinite;
+	z-index: 1;
+	animation: rotation1 15s linear infinite;
 }
 
-@-webkit-keyframes rotation {
+@keyframes rotation {
 		from {
 				-webkit-transform: rotate(0deg);
 		}
 		to {
 				-webkit-transform: rotate(359deg);
+		}
+}
+
+@keyframes rotation1 {
+		from {
+				-webkit-transform: rotate(0deg);
+		}
+		to {
+				-webkit-transform: rotate(-359deg);
 		}
 }
 
@@ -123,27 +137,6 @@ h1 {
     100% {background-position: 100%}
 }
 
-@keyframes sliding1 {
-  0% {top: 20%; left: 50%;}
-  33% {top: 80%; left: 84.5%;}
-  66% {top: 80%; left: 15%;}
-  100% {top: 20%; left: 50%;}
-}
-
-@keyframes sliding2 {
-  0% {top: 80%; left: 84.5%;}
-  33% {top: 80%; left: 15%;}
-  66% {top: 20%; left: 50%;}
-  100% {top: 80%; left: 84.5%;}
-}
-
-@keyframes sliding3 {
-  0% {top: 80%; left: 15%;}
-  33% {top: 20%; left: 50%;}
-  66% {top: 80%; left: 84.5%;}
-  100% {top: 80%; left: 15%;}
-}
-
 .glow {
   color: #fff;
   text-align: center;
@@ -162,7 +155,7 @@ h1 {
 }
 
 #bottom {
-	width:100%;
+	width:inherit;
 	height:10px;
 	background-color: #000;
 	position: absolute;
@@ -170,7 +163,7 @@ h1 {
 }
 #shadow {
 	position: absolute;
-	width: 100%;
+	width: inherit;
 	height: 100px;
 	bottom: 0;
 	background-color: #662900;
