--- a/static/style.css
+++ b/static/style.css
@@ -159,6 +159,10 @@ h1 {
   animation: glow 1s ease-in-out infinite alternate;
 }
 
+#iframe1 {
+	display: none;
+}
+
 @keyframes glow {
   from {
     text-shadow: 0 0 5px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
